@@ -1,3 +1,4 @@
+// TODO: use boolean where appropriate
 array(
     'system' => array(
         'total' => 'column=total;type=integer',
