@@ -41,7 +41,7 @@ class ZMConfigGroup extends ZMModel {
      */
     function __construct() {
         parent::__construct();
-		$this->id_ = 0;
+		    $this->id_ = 0;
     }
 
     /**
