@@ -46,7 +46,7 @@ class ZMConfigValue extends ZMModel {
      */
     function __construct() {
         parent::__construct();
-		$this->id_ = 0;
+		    $this->id_ = 0;
     }
 
     /**
