@@ -64,7 +64,7 @@ class ZMCountries extends ZMObject {
      * @param string name The country name.
      * @return ZMCountry The country or <code>null</code>.
      */
-    function getCountryForName($name) {
+    public function getCountryForName($name) {
         $this->getCountries();
         foreach ($this->countries_ as $country) {
             if ($name == $country->name_) {
@@ -74,23 +74,21 @@ class ZMCountries extends ZMObject {
         return null;
     }
 
-
     /**
      * Get a list of all countries.
      *
      * @return array A list of <code>ZMCountry</code> objects.
      */
-    function getCountries() {
+    public function getCountries() {
         if (null !== $this->countries_)
             return $this->countries_;
 
-        $sql = "select *
-                from " . TABLE_COUNTRIES . "
-                order by countries_name";
+        $sql = "SELECT *
+                FROM " . TABLE_COUNTRIES . "
+                ORDER BY countries_name";
         $this->countries_ = ZMRuntime::getDatabase()->query($sql, array(), TABLE_COUNTRIES, 'Country');
         return $this->countries_;
     }
-
 
     /**
      * Get country for the given id.
@@ -98,10 +96,10 @@ class ZMCountries extends ZMObject {
      * @param int id The country id.
      * @return ZMCountry The country or <code>null</code>.
      */
-    function getCountryForId($id) {
+    public function getCountryForId($id) {
         $this->getCountries();
         foreach ($this->countries_ as $country) {
-            if ($id == $country->id_) {
+            if ($id == $country->getId()) {
                 return $country;
             }
         }
@@ -117,11 +115,11 @@ class ZMCountries extends ZMObject {
      * @param string defaultZone Optional default value; default is <code>''</code>.
      * @return string The zone code or the provided default value.
      */
-    function getZoneCode($countryId, $zoneId, $defaultZone='') {
-        $sql = "select zone_code
-                from " . TABLE_ZONES . "
-                where zone_country_id = :countryId
-                and zone_id = :id";
+    public function getZoneCode($countryId, $zoneId, $defaultZone='') {
+        $sql = "SELECT zone_code
+                FROM " . TABLE_ZONES . "
+                WHERE zone_country_id = :countryId
+                 AND zone_id = :id";
         $zone = ZMRuntime::getDatabase()->querySingle($sql, array('id' => $zoneId, 'countryId' => $countryId), TABLE_ZONES);
         return null !== $zone ? $zone['code'] : $defaultZone;
     }
@@ -133,15 +131,15 @@ class ZMCountries extends ZMObject {
      * @param int countryId The country id.
      * @return array List of <code>ZMZone</code> objects.
      */
-    function getZonesForCountryId($countryId) {
+    public function getZonesForCountryId($countryId) {
         if (empty($countryId)) {
             return array();
         }
 
-        $sql = "select distinct *
-                  from " . TABLE_ZONES . "
-                  where zone_country_id = :countryId
-                  order by zone_name";
+        $sql = "SELECT distinct *
+                FROM " . TABLE_ZONES . "
+                WHERE zone_country_id = :countryId
+                ORDER BY zone_name";
         $zones = ZMRuntime::getDatabase()->query($sql, array('countryId' => $countryId), TABLE_ZONES, 'Zone');
         return $zones;
     }
